tdf#111696 No macro security dialog with High setting

Regression from commit 528632660b72b105345945c13c5b68060d94a91b
"convert ErrCode to strong typedef"

Why this is necessary I don't know. Only the change in ehdl.cxx is
necessary to fix the reported bug, bug fixing the other one too because
it operates in the same way.

I know that the other arrays that get passed here look like:

{ NC_("RID_UUI_ERRHDL", "....."),
ErrCode(sal_uInt32(ERRCODE_UUI_IO_ABORT) & ERRCODE_RES_MASK) },

but RID_ERRHDL in svtools/inc/errtxt.hrc does not, it looks like:

{ NC_("RID_ERRHDL", "...."),
ErrCode(ERRCODE_SFX_MACROS_SUPPORT_DISABLED) },

I'm guessing that somehow before my conversion somehow the code was
stripping the top bits off the error codes?

And why we need to strip the top half of the error code off at all is
also a mystery.

Change-Id: Iebca026ddf80e24ed74802410693adf90ea36047
Reviewed-on: https://gerrit.libreoffice.org/41172
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>